<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aws_iot_device_sdk_cpp_v2_vendor</name>
  <version>0.1.0</version>
  <description>A vendor package for AWS IoT Device SDK for C++ v2</description>
  <maintainer email="veloute.de.jonquille@gmail.com">ynyBonfennil</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_vendor_package</buildtool_depend>
  <buildtool_depend>curl</buildtool_depend>

  <depend>libssl-dev</depend>
  <depend>zlib</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>